--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,5 +1,6 @@
 ﻿
 @import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@200;300;600&family=Poppins:ital,wght@0,100;0,200;0,500;0,600;1,400&family=Quicksand:wght@300;500&family=Yuji+Hentaigana+Akari&display=swap');
+@import "compass/css3";
 body {
     min-height: 110vh;
     background-color: #4ca1af;
@@ -184,6 +185,7 @@ ul li {
 
 #aa {
     display: flex;
+    margin-top: 80px;
     font-family: 'Quicksand', sans-serif;
     font-weight: 200;
     background-color: #000000;
@@ -199,8 +201,7 @@ ul li {
 .responsive-table 
     li
 
-{
-    border-radius: 3px;
+{   border-radius: 3px;
     padding: 25px 30px;
     display: flex;
     justify-content: space-between;
@@ -264,4 +265,116 @@ ul li {
         text-align: right;
     }
 
+
+
+
+
+
+    #bod {display:flex;
+        font-family: Arial, sans-serif;
+        background: url(http://www.shukatsu-note.com/wp-content/uploads/2014/12/computer-564136_1280.jpg) no-repeat;
+        background-size: cover;
+        height: 100vh;
+    }
+
+    h1 {
+        text-align: center;
+        font-family: Tahoma, Arial, sans-serif;
+        color: #06D85F;
+        margin: 80px 0;
+    }
+
+    .box {
+        width: 40%;
+        background: rgba(255,255,255,0.2);
+        padding: 35px;
+        border: 2px solid #fff;
+        border-radius: 20px/50px;
+        background-clip: padding-box;
+        text-align: center;
+    }
+
+    .button {
+        font-size: 1em;
+        padding: 10px;
+        color: #fff;
+        border: 2px solid #06D85F;
+        border-radius: 20px/50px;
+        text-decoration: none;
+        cursor: pointer;
+        transition: all 0.3s ease-out;
+    }
+
+        .button:hover {
+            background: #06D85F;
+        }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0, 0, 0, 0.7);
+        transition: opacity 500ms;
+        visibility: hidden;
+        opacity: 0;
+    }
+
+        .overlay:target {
+            visibility: visible;
+            opacity: 1;
+        }
+
+    .popup {
+        margin: 70px auto;
+        padding: 20px;
+        background: #fff;
+        border-radius: 5px;
+        width: 30%;
+        position: relative;
+        transition: all 5s ease-in-out;
+    }
+
+        .popup h2 {
+            margin-top: 0;
+            color: #333;
+            font-family: Tahoma, Arial, sans-serif;
+        }
+
+        .popup .close {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            transition: all 200ms;
+            font-size: 30px;
+            font-weight: bold; 
+            text-decoration: none;
+            color: #333;
+        }
+
+            .popup .close:hover {
+                color: #06D85F;
+            }
+
+        .popup .content {
+            max-height: 30%;
+            overflow: auto;
+            font-family: 'Yuji Hentaigana Akari', cursive;
+            font-size: larger;
+            font-weight: 400;
+        }
+
+    @media screen and (max-width: 700px) {
+        .box {
+            width: 70%;
+        }
+
+        .popup {
+            width: 70%;
+           
+            font-size: larger;
+            font-weight: 400;
+        }
+    }
    
